# pulseaudio-led-mute

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: consts.cmake  dependencies.cmake  flags.cmake  packing.cmake
config/: 99-led-audio.rules  CMakeLists.txt  pulseaudio-led-mute.service.in  pulseaudio-led-mute.yml
deb/: postinst.in  postrm.in  preinst.in
doc/: CMakeLists.txt  pulseaudio-led-mute.1.scd.in
src/: CMakeLists.txt  iupdater.hpp  led.cpp  led.hpp  log.cpp  log.hpp  main.cpp  main_loop.hpp  pa_callback_wrapper.hpp  pa_context.cpp  pa_context.hpp  pa_operation.hpp  pa_threaded_mainloop.cpp  pa_threaded_mainloop.hpp  updater_default.cpp  updater_default.hpp  updater_named.cpp  updater_named.hpp
